Moved styles out of div elements into CSS

--- a/paper-fab-menu.html
+++ b/paper-fab-menu.html
@@ -19,10 +19,10 @@
 ##### Example
 
     <paper-fab-menu icon="menu" closeIcon="close" duration="0.3">
-      <paper-fab-menu-item icon="info-outline" color="blue;" tooltip="Information"></paper-fab-menu-item>
-      <paper-fab-menu-item icon="alarm" color="purple;" tooltip="Alarm"></paper-fab-menu-item>
-      <paper-fab-menu-item icon="star-outline" color="green;" tooltip="Favorites"></paper-fab-menu-item>
-      <paper-fab-menu-item icon="list" color="orange;" tooltip="List"></paper-fab-menu-item>
+      <paper-fab-menu-item icon="info-outline" tooltip="Information"></paper-fab-menu-item>
+      <paper-fab-menu-item icon="alarm" tooltip="Alarm"></paper-fab-menu-item>
+      <paper-fab-menu-item icon="star-outline" tooltip="Favorites"></paper-fab-menu-item>
+      <paper-fab-menu-item icon="list"  tooltip="List"></paper-fab-menu-item>
     </paper-fab-menu>
 
 @element paper-fab-menu
@@ -36,19 +36,6 @@
 <dom-module id="paper-fab-menu">
 
   <template>
-
-    <style>
-      .layout {
-        @apply(--layout);
-      }
-      .layout.vertical {
-        @apply(--layout-vertical);
-      }
-      .layout.center {
-        @apply(--layout-center);
-      }
-    </style>
-
     <style>
       :host {
         /*position: absolute !important;*/
@@ -65,6 +52,10 @@
       }
 
       .container {
+        @apply(--layout);
+        @apply(--layout-vertical);
+        @apply(--layout-center);
+
         /* layer hack */
         transform: translateZ(0);
         overflow: visible;
@@ -107,26 +98,40 @@
         -webkit-transform: scale(1);
       }
 
-      .container .item-container {
-          left:0;
-          right: 0;
-          transition-property: transform, -moz-transform, -webkit-transform;
-          transform: scale3d(0, 0, 0);
-          -moz-transform: scale3d(0, 0, 0);
-          -webkit-transform: scale3d(0, 0, 0);
+      .container .items-flow {
+        @apply(--layout);
+        @apply(--layout-vertical);
+        @apply(--layout-center);
+
+        position: absolute;
+        overflow: visible;
+        left:0;
+        right: 0;
       }
 
+      .container .item-container {
+        @apply(--layout);
+        @apply(--layout-vertical);
+        @apply(--layout-center);
+
+        position: absolute;
+        bottom: 0;
+        left:0;
+        right: 0;
+
+        transition-property: transform, -moz-transform, -webkit-transform;
+        transform: scale3d(0, 0, 0);
+        -moz-transform: scale3d(0, 0, 0);
+        -webkit-transform: scale3d(0, 0, 0);
+      }
 
       .container.show .item-container {
-          transition-delay: 0s;
-          transition-property: transform, -moz-transform, -webkit-transform;
-          transform: scale3d(1, 1, 1);
-          -moz-transform: scale3d(1, 1, 1);
-          -webkit-transform: scale3d(1, 1, 1);
+        transition-delay: 0s;
+        transition-property: transform, -moz-transform, -webkit-transform;
+        transform: scale3d(1, 1, 1);
+        -moz-transform: scale3d(1, 1, 1);
+        -webkit-transform: scale3d(1, 1, 1);
       }
-
-
-
     </style>
 
     <style>
@@ -157,17 +162,16 @@
       }
     </style>
 
-    <div class="container layout vertical center" id="fam">
-      <paper-fab-menu-overlay id="overlay" with-backdrop={{overlay}} on-iron-overlay-opened="overlayOpenedChanged" on-iron-overlay-closed="overlayOpenedChanged"></paper-fab-menu-overlay>
-        <div style="position: absolute; overflow: visible; left:0; right: 0;" class="layout vertical center">
-          <div class="item-container layout vertical center" style="position: absolute; bottom: 0;">
-            <content id="content" select="paper-fab-menu-item"></content>
-          </div>
+    <div class="container" id="fam">
+      <paper-fab-menu-overlay id="overlay" with-backdrop={{overlay}} on-iron-overlay-opened="overlayOpenedChanged"
+                              on-iron-overlay-closed="overlayOpenedChanged"></paper-fab-menu-overlay>
+      <div class="items-flow">
+        <div class="item-container">
+          <content id="content" select="paper-fab-menu-item"></content>
         </div>
-
+      </div>
       <paper-fab icon="menu" id="trigger" on-tap="toggle"></paper-fab>
     </div>
-
   </template>
 
   <script>
@@ -178,24 +182,24 @@
 
       properties: {
         /**
-        * Set the icon of main button to close floating menu
-        *
-        * @attribute closeIcon
-        * @type String
-        * @default 'close'
-        */
+         * Set the icon of main button to close floating menu
+         *
+         * @attribute closeIcon
+         * @type String
+         * @default 'close'
+         */
         closeIcon: {
           type: String,
           value: 'close',
           notify: true
         },
         /**
-        * Set duration of total animation to show/hide menu. This will be seed value to determine delay and duration of each menu item.
-        *
-        * @attribute duration
-        * @type Float
-        * @default 0.3
-        */
+         * Set duration of total animation to show/hide menu. This will be seed value to determine delay and duration of each menu item.
+         *
+         * @attribute duration
+         * @type Float
+         * @default 0.3
+         */
         duration: {
           type: Number,
           value: 0.3,
@@ -203,24 +207,24 @@
           observer: 'durationChanged'
         },
         /**
-        * Set the default icon of main button to show floating menu
-        *
-        * @attribute icon
-        * @type String
-        * @default 'menu'
-        */
+         * Set the default icon of main button to show floating menu
+         *
+         * @attribute icon
+         * @type String
+         * @default 'menu'
+         */
         icon: {
           type: String,
           value: 'menu',
           notify: true
         },
         /**
-        * Automactically set delay to each item. This will be deprecated at later version.
-        *
-        * @attribute items
-        * @type Array
-        * @default []
-        */
+         * Automactically set delay to each item. This will be deprecated at later version.
+         *
+         * @attribute items
+         * @type Array
+         * @default []
+         */
         items: {
           type: Array,
           value: function () {
@@ -228,23 +232,23 @@
           }
         },
         /**
-        * Set opened to true to show the floating menu and to false to hide it.
-        *
-        * @attribute opened
-        * @type boolean
-        * @default false
-        */
+         * Set opened to true to show the floating menu and to false to hide it.
+         *
+         * @attribute opened
+         * @type boolean
+         * @default false
+         */
         opened: {
           type: Boolean,
           value: false,
           observer: 'openedChanged'
         },
         /**
-        * Set if the overlay of screen should be used when the menu is opened.
-        * @attribute overlay
-        * @type boolean
-        * @default
-        */
+         * Set if the overlay of screen should be used when the menu is opened.
+         * @attribute overlay
+         * @type boolean
+         * @default
+         */
         overlay: {
           type: Boolean,
           value: true,
@@ -252,12 +256,12 @@
         },
 
         /**
-        * Set z-index of container to contain whole parts of menu. This will be depth to determine z-orders of elements including paper-fab-menu.
-        *
-        * @attribute zIndex
-        * @type Integer
-        * @default 10000
-        */
+         * Set z-index of container to contain whole parts of menu. This will be depth to determine z-orders of elements including paper-fab-menu.
+         *
+         * @attribute zIndex
+         * @type Integer
+         * @default 10000
+         */
         // zIndex: {
         //   type: Number,
         //   value: 10000,
