--- a/test-tap-area.html
+++ b/test-tap-area.html
@@ -15,6 +15,7 @@
 
   <script src="../webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="paper-fab-menu.html">
+  <link rel="import" href="../iron-icons/iron-icons.html">
 
   <style>
     body {
